--- a/telegram_group_counts.ipynb
+++ b/telegram_group_counts.ipynb
@@ -123,7 +123,7 @@
    "outputs": [],
    "source": [
     "# Now we can get the top words for a user\n",
-    "get_top_n_words('someone', lista, n=100)"
+    "get_top_n_words('someone', stopwords, n=100)"
    ]
   }
  ],
