--- a/telegram_group_counts.ipynb
+++ b/telegram_group_counts.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "For downloading chat data, go to Settings > Advanced > Export Telegram data > Machine-readable JSON\n",
     "\n",
-    "For downloading for a chat individually, JSON format is not available (but there is a github issue on that, so hopefully it will be available soon)"
+    "For downloading individually, JSON format is not available (but there is a github issue on it, so hopefully it will be available soon)"
    ]
   },
   {
