Use spanish stopwords from nltk.stopwords package

--- a/telegram_group_counts.ipynb
+++ b/telegram_group_counts.ipynb
@@ -17,9 +17,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "import pandas as pd\n",
-    "from sklearn.feature_extraction.text import CountVectorizer"
+   "import json\n",
+	"import pandas as pd\n",
+	"from sklearn.feature_extraction.text import CountVectorizer\n",
+	"from nltk.corpus import stopwords\n",
+	"from nltk import download"
    ]
   },
   {
@@ -89,10 +91,15 @@
    "outputs": [],
    "source": [
     "# Stopwords are words commonly used in a language that do not provide much information\n",
-    "# For english, sklearn has a defined list, so stopwords='english' may be used\n",
-    "# For other languages or custom words, fill in the list\n",
-    "# E.g for Spanish\n",
-    "stopwords=['de', 'que', 'la', 'es', 'el', 'en','me', 'lo', 'un', 'los', 'una', 'han', 'las', 'al', 'se']"
+	"# For english, sklearn has a defined list, so stopwords='english' may be used\n",
+	"# For other languages, the nltk.stopwords package can be used. \n",
+	"download('stopwords')\n",
+	"# E.g for Spanish\n",
+	"stopwords = stopwords.words('spanish')\n",
+	"# alternatively you can create your own list of custom words\n",
+	"# stopwords=['de', 'que', 'la', 'es', 'el', 'en','me', 'lo', 'un', 'los', 'una', 'han', 'las', 'al', 'se']\n",
+	"# or append words to an existing stopwords list\n",
+	"# stopwords.extend(['de', 'que', 'la', 'es', 'el', 'en','me', 'lo', 'un', 'los', 'una', 'han', 'las', 'al', 'se'])"
    ]
   },
   {
