--- a/telegram_group_counts.ipynb
+++ b/telegram_group_counts.ipynb
@@ -78,7 +78,7 @@
    "source": [
     "usernames=[]\n",
     "messages=[]\n",
-    "for user, mes in tele.groupby(['from']):\n",
+    "for user, mes in df_chat.groupby(['from']):\n",
     "    usernames.append(user)\n",
     "    messages.append(mes['text'])\n",
     "print(\"Users: \", usernames)"
